# AxonBridge

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  clinical-testing-guide.md  package-lock.json  replace_keys.py  run.md  workflow-testing-examples.md
.github/workflows/: ci.yml
apps/agent-service/: Dockerfile  requirements.txt
apps/agent-service/app/: config.py  main.py
apps/agent-service/workers/: celery_worker.py
apps/api/: Dockerfile  README.md  alembic.ini  e2e_agent.py  e2e_test.py  mock-portal.html  pyproject.toml  seed.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 95208d5f6108_initial_schema.py  __init__.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/api/v1/: __init__.py  audit.py  auth.py  clinical.py  health.py  his_targets.py  roles.py  router.py  tenants.py  users.py  workflows.py
apps/api/app/core/: __init__.py  config.py  database.py  exceptions.py  llm_client.py  logging.py  middleware.py  minio_client.py  redis.py  security.py
apps/api/app/core/agent/: __init__.py  agent_orchestrator.py  browser_manager.py
apps/api/app/core/temporal/: __init__.py  worker.py
apps/api/app/models/: __init__.py  agent.py  audit.py  base.py  clinical.py  his_target.py  language.py  role.py  tenant.py  user.py  workflow.py
apps/api/app/schemas/: __init__.py  agent.py  audit.py  auth.py  clinical.py  common.py  role.py  tenant.py  user.py  workflow.py
apps/api/app/services/: __init__.py  audit_service.py  auth_service.py  clinical_orchestrator.py  encryption_service.py  rbac_service.py  tenant_service.py  user_service.py  workflow_orchestrator.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_health.py
apps/clinical-service/: Dockerfile  requirements.txt
apps/clinical-service/app/: main.py
apps/nlp-service/: Dockerfile  download_models.py  requirements.txt
apps/nlp-service/app/: config.py  main.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/public/: .gitkeep
infrastructure/docker/: docker-compose.yml
infrastructure/kong/: kong.yml
infrastructure/temporal/: temporal-config.yml
infrastructure/vault/: vault-policy.hcl
(+55 files in other folders)
